Ran code auto-format